--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "This job's status is ${{ job.status}}."
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        run: actions/setup-java@v3
       - name: Show Java version
         run: "java -version"
       - name: Checkout code   
