--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "This job's status is ${{ job.status}}."
       - name: Set up JDK 20
-        run: actions/setup-java@v3
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
       - name: Show Java version
         run: "java -version" 
       - name: Run a script
