--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,40 +2,54 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions
 on:
   push:
-  workflow_dispatch:
+  workflow_dispatch:  # Добавлен триггер для ручного запуска
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }}event."
-      - run: echo "This job is now running on a ${{ runner.os }}server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository}}."
+      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      
       - name: Check out repository code
-        uses: actions/checkout@v3 
-      - run: echo "The ${{ github.repository }}repository has been cloned to the runner."
-      - run: echo "The workflow is nowready to test your code on the runner."
+        uses: actions/checkout@v3
+      
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "The workflow is now ready to test your code on the runner."
+      
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status}}."
+      
+      - run: echo "This job's status is ${{ job.status }}."
+      
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
           java-version: '20'
           distribution: 'temurin'
+      
       - name: Show Java version
-        run: "java -version" 
+        run: "java -version"
+      
       - name: Run a script
         run: ./my-script.sh
+      
       - name: Run another script
-        run: ./my-other-script.shs
+        run: ./my-other-script.sh
+      
       - name: Show directory
         run: 'pwd'
+      
       - name: List files
         run: 'ls -al'
+      
       - name: Install Dependencies
         run: 'mvn compile'
+      
       - name: Build application
         run: 'mvn package -DskipTests'
+      
       - name: Test application
         run: 'mvn test'
