--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,15 @@ run-name: ${{ github.actor }} is testing out GitHub Actions
 on:
   push:
   workflow_dispatch:
+    inputs:
+      script_name:
+        description: 'Select the script to run'
+        required: true
+        default: 'my-script.sh'
+        type: choice
+        options:
+          - my-script.sh
+          - my-other-script.sh
 
 jobs:
   Explore-GitHub-Actions:
@@ -48,7 +57,5 @@ jobs:
       - name: Test application
         run: 'mvn test'
       
-      - name: Run the scripts
-        run: |
-          ./my-script.sh
-          ./my-other-script.sh
+      - name: Run the selected script
+        run: ./$(echo "${{ github.event.inputs.script_name }}")
